--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,6 +56,8 @@ dependencies {
     kapt 'androidx.room:room-compiler:2.4.3'
     kaptAndroidTest 'androidx.room:room-compiler:2.4.3'
 
+    implementation 'com.google.code.gson:gson:2.10'
+
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.5.1'
     implementation 'com.google.android.material:material:1.7.0'
